# composia

./: .dockerignore  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONSTRAINTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  SPEC.md  SYSTEM.md  bench_babilong_v2.py  demo.py  eval_loop.py  index.js  intro.md  package-lock.json  package.json  railway.json  test_engine.py
.claude/: settings.json
context-engine/: CLAUDE.md  README.md  bench.js  context.js  init.js  loop.js  schema.md  wiki.js
context_engine/: __init__.py  bench_adapter.py  config.py  decomposer.py  graph_store.py  llm_client.py  models.py  pipeline.py  prompt_template.py  resynthesizer.py  retriever.py  vector_store.py
coverage/: clover.xml  coverage-final.json  index.html
coverage/controllers/: index.html  (+1 more)
db/: functions.sql  schema.sql  seed_test_data.sql  setup_db.sql  stress_test.sql
docs/: create.json  delete.json  endpoints.json  hierarchy.get.id.json  hierarchy.mount.json  invarients.md  mvp-checklist-marketplace.md  order.update.json  payload.update.json  read.json  unit.update.json
mvp/: agent.py  bench.py  bench_locomo.py  bench_longmemeval.py  prompt_builder.py  wiki.py  wiki_updater.py
src/: app.js  benchmark.js  cli.js  engine.js  hooks.js  init.js  kernel.js  knowledge.js  lib.rs  mapper.js  mcp.js  parser.js  prompt-mapper.js  registry.js  resolve.js  schema.js  seed.js  server.js  summarizer.js  sync.js  ui.html  vectors.js  viewer.js  wikipedia.js
tests/: api.test.js  engine.test.js  knowledge.test.js  mapper.test.js  parser.test.js  resolution.test.js
(+59 files in other folders)
