[package]
name = "composia_native" # Changed from hyphen to underscore
version = "1.0.0"
edition = "2021"

[lib]
name = "composia_native" # Explicitly name the library output
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", features = ["serde-json", "async", "tokio_rt"] }
napi-derive = "2.16"
heed = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.1"